<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FirstFragment">

    <TextView
        android:id="@+id/firstFragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/apple_sd_gothic_neo_heavy"
        android:text="@string/first_fragment"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ToActivityText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/input_shape"
        android:fontFamily="@font/apple_sd_gothic_neo_extrabold"
        android:hint="@string/text_to_secondActivity"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#CBCBCB"
        app:layout_constraintEnd_toStartOf="@id/btn_SendTextToActivity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstFragment_title" />

    <Button
        android:id="@+id/btn_SendTextToActivity"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/apple_sd_gothic_neo_extrabold"
        android:text="@string/send"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@id/ToActivityText"
        app:layout_constraintTop_toBottomOf="@id/firstFragment_title">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>