<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragment_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/secondActivity_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_gravity="bottom"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_bar"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/apple_sd_gothic_neo_heavy"
                android:text="@string/second_activity_info"
                android:textSize="25sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp">

                <Button
                    android:id="@+id/switchFragment1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/button_shape"
                    android:fontFamily="@font/apple_sd_gothic_neo_extrabold"
                    android:text="@string/first_fragment"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@id/switchFragment2"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintHorizontal_weight="5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/switchFragment2"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_shape"
                    android:fontFamily="@font/apple_sd_gothic_neo_extrabold"
                    android:text="@string/second_fragment"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintHorizontal_weight="5"
                    app:layout_constraintStart_toEndOf="@id/switchFragment1"
                    app:layout_constraintTop_toTopOf="parent">

                </Button>

                <EditText
                    android:id="@+id/TextFromFragment"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/input_shape"
                    android:fontFamily="@font/apple_sd_gothic_neo_extrabold"
                    android:hint="@string/text_from_firstFragment"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="#CBCBCB"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/switchFragment1" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/selectFragmentNavi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/navi_shape"
        app:menu="@menu/fragment_menu"
        app:labelVisibilityMode="unlabeled"

        />

</LinearLayout>