<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/firstActivity_view"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_bar"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/apple_sd_gothic_neo_heavy"
                android:text="@string/firstactivity_info"
                android:textSize="25sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/apple_sd_gothic_neo_extrabold"
                    android:text="@string/received"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@id/ReceivedText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/ReceivedText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/input_shape"
                    android:fontFamily="@font/apple_sd_gothic_neo_extrabold"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@id/switchToMain"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintHorizontal_weight="10"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/info_text" />

                <Button
                    android:id="@+id/switchToMain"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/button_shape"
                    android:fontFamily="@font/apple_sd_gothic_neo_extrabold"
                    android:text="@string/send_to_main"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintHorizontal_weight="6"
                    app:layout_constraintStart_toEndOf="@id/ReceivedText"
                    app:layout_constraintTop_toBottomOf="@id/info_text">

                </Button>

                <Button
                    android:id="@+id/switchActivity2"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_shape"
                    android:fontFamily="@font/apple_sd_gothic_neo_extrabold"
                    android:text="@string/go_to_second"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintHorizontal_weight="6"
                    app:layout_constraintStart_toStartOf="@id/ReceivedText"
                    app:layout_constraintTop_toBottomOf="@id/switchToMain">

                </Button>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>