<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_bar"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/apple_sd_gothic_neo_heavy"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textSize="25sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp">

                <EditText
                    android:id="@+id/IntentDataText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/input_shape"
                    android:fontFamily="@font/apple_sd_gothic_neo_extrabold"
                    android:hint="@string/text_to_firstactivity"
                    android:textColorHint="#CBCBCB"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toStartOf="@id/switchActivity"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_weight="10"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/switchActivity"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_shape"
                    android:fontFamily="@font/apple_sd_gothic_neo_extrabold"
                    android:text="@string/send"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_weight="3"
                    app:layout_constraintStart_toEndOf="@id/IntentDataText"
                    app:layout_constraintTop_toTopOf="parent">

                </Button>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>